--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit
-opencv-contrib-python-headless
-numpy
-pandas
-pillow
-streamlit-webrtc
-av
+streamlit>=1.28.0
+opencv-python-headless>=4.8.0
+opencv-contrib-python-headless>=4.8.0
+pandas>=2.0.0
+numpy>=1.24.0
+Pillow>=10.0.0
+streamlit-webrtc>=0.47.0
+av>=10.0.0
